--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
+    "bootstrap": "^5.2.2",
     "gatsby": "^5.0.0",
+    "gatsby-plugin-manifest": "^5.0.0",
+    "gatsby-plugin-sass": "^6.0.0",
     "gatsby-plugin-styled-components": "^6.0.0",
+    "gatsby-remark-color-highlight": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.56.1",
     "styled-components": "^5.3.6"
   }
 }
